--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/lodash": "^4.14.191",
     "axios": "^1.3.3",
     "classnames": "^2.3.2",
+    "dompurify": "^3.0.0",
     "framer-motion": "^9.0.6",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
@@ -31,6 +32,7 @@
     "yup": "^1.0.0"
   },
   "devDependencies": {
+    "@types/dompurify": "^2.4.0",
     "@types/node": "^18.14.0",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
